Tantris. Mix tiles of same type.