@@ -1,17 +1,11 @@
 // Copyright by Barry G. Becker, 2012. Licensed under MIT License: http://www.opensource.org/licenses/MIT
 package com.becker.puzzle.tantrix.solver.path;
 
-import com.becker.common.geometry.Box;
 import com.becker.common.geometry.Location;
-import com.becker.common.math.MathUtil;
 import com.becker.optimization.parameter.ParameterArray;
 import com.becker.optimization.parameter.PermutedParameterArray;
 import com.becker.puzzle.tantrix.model.*;
-import com.becker.puzzle.tantrix.solver.path.permuting.PathPermuter;
 
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
 import java.util.Map;
 
 /**
@@ -27,7 +21,6 @@ public class TantrixPath extends PermutedParameterArray {
 
     private TilePlacementList tiles_;
     private PathColor primaryPathColor_;
-    private PathEvaluator evaluator_ = new PathEvaluator();
 
     /**
      * The list of tiles that are passed in must be a continuous primary path,
@@ -39,7 +32,7 @@ public class TantrixPath extends PermutedParameterArray {
     public TantrixPath(TilePlacementList tiles, PathColor primaryColor) {
         assert primaryColor != null;
         primaryPathColor_ = primaryColor;
-        tiles_ = tiles;
+        tiles_ = new TilePlacementList(tiles);
 
         if (!hasOrderedPrimaryPath(tiles, primaryColor)) {
             throw new IllegalStateException(
@@ -71,11 +64,11 @@ public class TantrixPath extends PermutedParameterArray {
     }
 
     public TilePlacement getFirst() {
-        return tiles_.getFirst();
+        return tiles_.get(0);
     }
 
     public TilePlacement getLast() {
-        return tiles_.getLast();
+        return tiles_.get(tiles_.size()-1);
     }
 
     @Override
@@ -152,17 +145,11 @@ public class TantrixPath extends PermutedParameterArray {
     @Override
     public PermutedParameterArray getRandomNeighbor(double radius) {
 
-        int count = 0;
-        List<TantrixPath> pathPermutations;
-        do {
-            pathPermutations = findPermutedPaths(radius);
-        } while (pathPermutations.isEmpty() && count++ < 5);
-
-        assert (!pathPermutations.isEmpty()) : "Could not find any permutations of " + this + "\n count=" + count;
-        return selectPath(pathPermutations);
+        PathPermutationGenerator generator = new PathPermutationGenerator(this);
+        return generator.getRandomNeighbor(radius);
     }
 
-      /**
+    /**
      * @return get a completely random solution in the parameter space.
      */
     @Override
@@ -188,8 +175,8 @@ public class TantrixPath extends PermutedParameterArray {
         double distance = getEndPointDistance();
 
         if (distance == 0) {
-            Map<Integer, Location> outgoing = tiles_.getFirst().getOutgoingPathLocations(primaryPathColor_);
-            if (outgoing.containsValue(tiles_.getLast().getLocation())) {
+            Map<Integer, Location> outgoing = getFirst().getOutgoingPathLocations(primaryPathColor_);
+            if (outgoing.containsValue(getLast().getLocation())) {
                 return true;
             }
         }
@@ -207,8 +194,8 @@ public class TantrixPath extends PermutedParameterArray {
         if (tiles_.size() == 1) {
             return 1.0;
         }
-        TilePlacement first = tiles_.getFirst();
-        TilePlacement last = tiles_.getLast();
+        TilePlacement first = getFirst();
+        TilePlacement last = getLast();
         Location end1 = first.getLocation();
         Location end2 = last.getLocation();
 
@@ -219,98 +206,6 @@ public class TantrixPath extends PermutedParameterArray {
         }
 
         return HexUtil.distanceBetween(end1, end2);
-    }
-
-    /**
-     * try the seven cases and take the one that works best
-     * @param radius the larger the radius the wider the variance of the random paths returned.
-     * @return 7 permuted path cases.
-     */
-    private List<TantrixPath> findPermutedPaths(double radius) {
-
-        List<TantrixPath> permutedPaths = new ArrayList<TantrixPath>();
-        PathPermuter permuter = new PathPermuter(this);
-        int numTiles = tiles_.size();
-
-        if (radius >= 0.4) {
-            for (int i = 1; i < numTiles - 1; i++) {
-                permutedPaths.addAll(permuter.findPermutedPaths(i, i));
-            }
-        }
-        else if (radius > 0.00) {
-            // n^2 * 7 permuted paths will be added.
-            for (int pivot1 = 1; pivot1 < numTiles-1; pivot1++) {
-                for (int pivot2 = pivot1; pivot2 < numTiles-1; pivot2++) {
-                    permutedPaths.addAll(permuter.findPermutedPaths(pivot1, pivot2));
-                }
-            }
-        }
-        /*
-        else if (radius > 0.04) {
-            int pivotIndex1 = 1 + MathUtil.RANDOM.nextInt(tiles_.size()-2);
-            int pivotIndex2 = 1 + MathUtil.RANDOM.nextInt(tiles_.size()-2);
-            return permuter.findPermutedPaths(pivotIndex1, pivotIndex2);
-        }
-        else if (radius > 0) {//0.01) {
-            int halfTiles = tiles_.size()/2;
-            int proportion = (int)Math.ceil(5.0 * radius * (halfTiles));
-            int pivotIndex1 = 1 + MathUtil.RANDOM.nextInt(proportion);
-            int pivotIndex2 = tiles_.size() - 2 - MathUtil.RANDOM.nextInt(proportion);
-            //System.out.println("radius="+radius+" numTiles=" + tiles_.size() + " pivotIndex1=" + pivotIndex1 + " pivotIndex2=" + pivotIndex2);
-            return permuter.findPermutedPaths(pivotIndex1, pivotIndex2);
-        } */
-
-        // if radius very small, swap non-fitting tiles of the same shape?
-        return permutedPaths;
-    }
-
-    /**
-     * @param paths list of paths to evaluate.
-     * @return the path with the best score. In other words the path which is closest to a valid solution.
-     */
-    private TantrixPath selectBestPath(List<TantrixPath> paths) {
-
-        double bestScore = -1;
-        TantrixPath bestPath = null;
-
-        for (TantrixPath path : paths) {
-            double score = evaluator_.evaluateFitness(path);
-            if (score > bestScore) {
-                bestPath = path;
-                bestScore = score;
-            }
-        }
-        return bestPath;
-    }
-
-    /**
-     * Skew toward selecting the best, but don't always select the best because then we
-     * might always return the same random neighbor.
-     * @param paths list of paths to evaluate.
-     * @return the path with the best score. In other words the path which is closest to a valid solution.
-     */
-    private TantrixPath selectPath(List<TantrixPath> paths) {
-
-        double totalScore = 0;
-        List<Double> scores = new ArrayList<Double>(paths.size() + 1);
-
-        for (TantrixPath path : paths) {
-            double score = evaluator_.evaluateFitness(path);
-            score *= score;
-            totalScore += score;
-            scores.add(score);
-        }
-        scores.add(10000.0);
-
-        double r = MathUtil.RANDOM.nextDouble() * totalScore;
-
-        double total = 0;
-        int ct = 0;
-        do {
-           total += scores.get(ct++);
-        } while (r > total);
-
-        return paths.get(ct-1);
     }
 
     @Override
